corrected drop down collapse bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,22 @@
 
 html, body {
-  	height: 100%;
-  	font-family: 'Helvetica Neue', Arial;
+  /*height: 100%;*/
+ 	/*font-family: 'Helvetica Neue', Arial;*/
+  font-family: 'Lato', sans-serif;
 }
 
 
 .active-slide {
 }
 
-.hsldr-nav-region {
+/*.hsldr-nav-region {
 	position: absolute;
 	height: 2px;
 	width: 20px;
 	top: 0px;
 	left: 0px;
 	background-color: #000;
-}
+}*/
 
 .hsldr-nav-wrapper {
 	position: absolute;
@@ -26,14 +27,14 @@ html, body {
   	-webkit-transform: translateX(-50%);
 }
 
-.hsldr-nav-marker {
+/*.hsldr-nav-marker {
     content: "";
     display: inline-block;
     height: 2px;
     width: 200px;
     background-color: #bbb;
     float: left;
-}
+}*/
 
 .hsldr-container {		
 	position: relative;
@@ -66,8 +67,9 @@ html, body {
 }
 
 .hsldr-image-container img {
+	margin-top: 60px;
 	width: auto;
-	height: 80vh;
+	height: 70vh;
 	max-height: 600px;
 	z-index: 0;
 }
